<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingLeft="15dp"
    android:paddingTop="0dp"
    android:paddingEnd="5dp"
    android:paddingRight="15dp"
    android:paddingBottom="0dp"
    tools:context=".UserRegister">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="71dp"
            android:layout_height="81dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pixelgram_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="cursive"
            android:text="@string/register"
            android:textColor="#000000"
            android:textSize="52sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:autofillHints="username"
        android:hint="@string/enter_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showHideBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:fontFamily="casual"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/show_password"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:fontFamily="serif"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>